			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

30-Jul-2004
~~~~~~~~~~~
Renamed Cancel to Close in the Properties box (suggested by Arnaud Calvo).
Updated some calls to use newer APIs, and allow compilation on systems where
deprecated widgets are disabled by default (reported by Vincent Lefèvre and
Guido Schimmels).
Bugfix: Panel icons were no longer shown highlighted when selected.

23-Jul-2004
~~~~~~~~~~~
Bugfix: When opening a new directory with saved settings, the filer would
	print a warning and then crash.

21-Jul-2004
~~~~~~~~~~~
Changed email address given as the one to send bugs to when using
--help to the rox-devel list (Stephen Watson).
Thumbnail generation now handles files with UTF-8 characters (Anatoly
Asviyan). 

16-Jul-2004
~~~~~~~~~~~
Removed action window screenshot from manual to save space.

15-Jul-2004
~~~~~~~~~~~
Proper check for the stat[v]fs headers (Stephen Watson, reported by
Lucas Hazel).

13-Jul-2004
~~~~~~~~~~~
Added firefox to list of default browsers (suggested by eugene).

10-Jul-2004
~~~~~~~~~~~
Added Romanian translation (Cosma Florin).

01-Jul-2004
~~~~~~~~~~~
Can now set "Brief" option on the Copy and Move action windows (Stephen 
Watson).
Properties window handles mount points specially when calculating their size
(Stephen Watson).

30-Jun-2004
~~~~~~~~~~~
Bugfix: On Linux, the filer called setxattr instead of getxattr, thus
	preventing setting filetypes with extended attributes from working.
Bugfix: Copy and Move now obey the "Brief" option (Stephen Watson, reported
        by Graham Borland)

29-Jun-2004
~~~~~~~~~~~
Bugfix: On multi-monitor setups, filer windows always opened on the top/left
	monitor (reported by Kacper Wysocki). Now they open on the monitor
	under the pointer.

27-Jun-2004
~~~~~~~~~~~
Icons of minimized windows remember their positions on the pinboard (Stephen 
Watson).
Filer now officially requires GTK 2.2.0 or later (wasn't working with 2.0
anyway, and noone had complained).