@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+01-Aug-2004
+~~~~~~~~~~~
+Build in ROX-Filer/build, not ~/build/ROX-Filer.
+
 30-Jul-2004
 ~~~~~~~~~~~
 Renamed Cancel to Close in the Properties box (suggested by Arnaud Calvo).
